# paperpilot

./: .coverage.Aidins-MacBook-Pro_local.pid73530.XMbo3uIx.HNQIp837rWOh  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements-research.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
config/: logging_config.py  settings.py
docs/: deploy.md  design-doc-template.md
docs/adr/: 0001-record-architecture-decisions.md  0002-paper-first-with-a-hard-live-trading-gate.md  0003-alpaca-as-primary-data-source.md  0004-broker-held-stops-and-fill-reconciliation.md  0005-persist-halt-state-across-restarts.md  0006-alerting-and-dashboard.md  0007-walk-forward-validation-and-trades-table.md  0008-llm-vs-classical-experiment-harness.md  0009-ops-hardening-from-week-one.md  adr-template.md
scripts/: check_no_emdash.py  preview_signals.py  run_agent.py  run_backtest.py  run_experiment.py  run_live.py  run_walkforward.py  strip_ai_attribution.sh  weekly_report.py
src/: __init__.py
src/agent/: loop.py  market_hours.py
src/backtest/: engine.py  walkforward.py
src/data/: alpaca_data.py  cache.py  market_data.py  universe.py
src/execution/: broker.py  reconcile.py  trade_stream.py
src/experiments/: __init__.py  harness.py
src/journal/: models.py  store.py  trades.py
src/monitoring/: alerts.py  dashboard.py  queries.py
src/risk/: manager.py
src/strategy/: base.py  indicators.py
src/strategy/examples/: mean_reversion.py  sma_crossover.py
src/strategy/llm/: __init__.py  cache.py  client.py  strategy.py
tests/: conftest.py  test_alerts.py  test_alpaca_data.py  test_backtest.py  test_broker.py  test_experiments.py  test_journal.py  test_live_loop.py  test_llm_cache.py  test_llm_openrouter.py  test_llm_strategy.py  test_market_data.py  test_market_hours.py  test_monitoring_queries.py  test_ops_hardening.py  test_reconcile.py  test_reset_halt_cli.py  test_risk.py  test_settings.py  test_strategy.py  test_trade_stream.py  test_trades.py  test_walkforward.py
