[project]
name = "paperpilot"
version = "0.1.0"
description = "Autonomous, risk-controlled paper-trading agent (educational)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -m 'not network'"
markers = [
    "network: requires live network access (deselected by default; run with -m network)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
