[project]
name = "paperpilot"
version = "0.1.0"
description = "Autonomous, risk-controlled paper-trading agent (educational)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -m 'not network'"
markers = [
    "network: requires live network access (deselected by default; run with -m network)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pyflakes/pycodestyle defaults plus import sorting, bugbear, pyupgrade, and
# simplification rules. Catches likely bugs and keeps syntax current.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
# Action subclasses (str, Enum) deliberately; switching to StrEnum would change
# str() semantics used in journal/LLM serialization. Keep the explicit pattern.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests favour explicit, readable assertions over the simplified forms.
"tests/**" = ["SIM"]

[tool.coverage.run]
source = ["src", "config"]

[tool.coverage.report]
# Coverage gate. CI runs pytest with --cov, so this fails the build on a drop.
# Plain local `pytest` does not pass --cov, so it stays ungated for dev speed.
fail_under = 88

[tool.mypy]
# No pinned python_version: each CI matrix job checks under its own
# interpreter, so site-packages stubs (e.g. numpy's PEP 695 `type` aliases,
# 3.12+) are parsed with the rules of the version that installed them.
files = ["src", "config"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# Third-party trading/data libraries (alpaca, yfinance, backtesting, apscheduler)
# ship without type stubs; do not fail on their missing imports.
ignore_missing_imports = true
